--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1807,107 +1807,107 @@ stories:
   domain: http://www.wctrib.com/
   link: https://www.wctrib.com/news/accidents/4833850-Minnesota-man-dies-after-fall-through-skylight
 images:
-- name: la-muse-dandelions-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dandelions-in-rocks.jpg
-- name: downtown-los-angeles-downtown-la-crunch-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-crunch-paper.JPG
-- name: braceros-domingo-ulloa-dandelions-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-dandelions-in-rocks.jpg
-- name: oldhotel-oldhotel-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-constitution.jpg
-- name: locked-up-steam-lock-up-steam-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smoking-cigarette.jpg
-- name: crow-crow-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-dream.jpg
-- name: adam-smith-adam-smith-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-granite.jpg
-- name: machine-road-machine-road-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-three.jpg
-- name: mistywoods-babyfoot-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-rain.jpg
-- name: aws-s3-square-machine-road-light-dali-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-machine-road-light-dali-square.jpg
-- name: yosemite-yosemite-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-cinnamon-rolls.jpg
-- name: hollywood-building-hollywood-building-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-china-prop.jpg
-- name: trucksilo-trucksilo-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dali-two.jpg
-- name: window-window-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-hot-spicy.jpg
-- name: old-door-lock-old-door-lock-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-sunday.jpg
-- name: aws-s3-stories-new-27-93-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--1--1.jpg
-- name: border-crossing-bordercrossing-alien-goggles.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alien-goggles.png
-- name: aws-s3-stories-new-art-museum-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-art-museum-light-dali.jpg
-- name: aws-s3-stories-window-mountain-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-window-mountain-clean-view.jpg
-- name: castle-wall-DSC-0067-deep-connections.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-deep-connections.JPG
-- name: bordercrossing-bordercrossing-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-gred-mash.jpg
-- name: ellis-island-ellis-island-room-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-dali.jpg
-- name: eduardo-eduardo-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-hot-spicy.jpg
-- name: wind-mills-windmills-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-clean-view.jpg
-- name: sand-hand-sand-hand-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-satan-red.jpg
-- name: fence-mexico-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-spagetti-accident.jpg
-- name: adam-smith-adam-smith-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-light-dali.jpg
-- name: berlinwall2-berlinwall-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-diego-rivera1.jpg
-- name: oldhotel-oldhotel-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-soul.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
-- name: supreme-court-supremecourt-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-yellow-paper.jpg
-- name: nazi-invasion-docs-cranes-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docs-cranes-waterfront.jpg
-- name: hollywood-building-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-jap-wav-pr.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-neo-instinct.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-neo-instinct.JPG
-- name: locked-up-steam-lock-up-steam-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-wols.jpg
-- name: containership-containership-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-bright-sand.jpg
-- name: berlinwall2-berlinwall-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-paper.jpg
-- name: bluelake-crunch-paper-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-00-38-67.jpg
-- name: power-lines-power-lines-empty-space-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-umberto-bocc.jpg
-- name: amusement-park-amusement-park-2-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sand-paper.jpg
-- name: docks-docks-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-really-hot.jpg
-- name: dc-statue-dcstatue-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-dali.jpg
-- name: miamibeach-miamibeach-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-neo-instinct.jpg
-- name: dc-statue-dcstatue-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gred-mash.jpg
-- name: oldroad-old-road-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-wols.jpg
+- name: bf-skinner-statue-with-shield-dark.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-with-shield-dark.jpg
+- name: aws-s3-square-66-189-800-500-0-max-0--1--1-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-66-189-800-500-0-max-0--1--1-square.jpg
+- name: paris-paris-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-blue-circuit.jpg
+- name: nyc-flag-nycflag-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-atari-asteroids.jpg
+- name: 35562068104_fa20c57575-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-nazi-invasion.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dry-skin.jpg
+- name: yuma-bank-yuma-bak-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colorful-dream.jpg
+- name: cargo-ship-cargo-ship-on-sea-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-blocks.jpg
+- name: amusement-park-amusement-park-2-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-3.jpg
+- name: legal-statue-legalstatue-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-two.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alberto-giacometti.png
+- name: oldhousecars-house-old-cars-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-bright-sand.jpg
+- name: sand-hand-sand-hand-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-copper-circuit-2.jpg
+- name: statue-of-liberty-front-view-statueofliberty-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-far-away.jpg
+- name: braceros-domingo-ulloa-old-church_36588495271_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-church_36588495271_o.jpg
+- name: bluelake-creativity-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-01-17-38.jpg
+- name: store-on-corner-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gred-mash.jpg
+- name: oldhouse-oldhouse-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-monet-one.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-wols.jpg
+- name: fence-fence-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-spagetti-accident.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crafty-painting.jpg
+- name: curtain-curtain-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-mucha-mult.jpg
+- name: bf-skinner-sunflower-big-green.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-sunflower-big-green.jpg
+- name: cargo-ship-cargo-ship-on-sea-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-purp-paper.jpg
+- name: school-clouds-church-clouds-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-rainbow-festival.jpg
+- name: beach-rocks-beach-rocks-currents-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kandinsky-bv.jpg
+- name: mistywoods-babyfoot-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-smooth-ride.jpg
+- name: sand-hand-sand-hand-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dali-two.jpg
+- name: death-valley-death-valley-national-park-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dry-skin.jpg
+- name: old-barn-old-barn-1500-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-soul.jpg
+- name: aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-64-176-800-500-0-max-0--1--1.jpg
+- name: adam-smith-adam-smith-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit-3.jpg
 - name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-3.png
-- name: downtheline-downtheline-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-spagetti-accident.jpg
-- name: berlinwall-DSC-0084-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-kandinsky-bv.jpg
-- name: art-museum-art-museum-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-oily-mcoilface.jpg
-- name: downtheline-downtheline-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crafty-painting.jpg
-- name: downtown-trucksilo-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-electricity.jpg
+- name: copper-circuit-dragon-desert-looking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dragon-desert-looking.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+- name: san-francisco-city-bridge-sf-city-bridge-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-wols.jpg
+- name: adam-smith-adam-smith-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-diego-rivera1.jpg
+- name: berlinwall-DSC-0084-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-emily-carr.jpg
+- name: sand-hand-sand-hand-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-granite.jpg
+- name: stalin-time-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-los-angeles-downtown-from-afar.jpg
+- name: border-crossing-bordercrossing-satan-red.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-satan-red.png
+- name: white-house-lawn-white-house-window-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-blue-granite.jpg
+- name: dragon-desert-desert-dragon-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-neo-instinct.jpg
+- name: docks-docks-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-satan-red.jpg
+- name: old-door-lock-old-door-lock-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-electricity.jpg
+- name: beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-crunch-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crunch-paper.png
+- name: beach-rocks-beach-rocks-currents-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-copper-circuit.jpg
+- name: bf-skinner-times-square-up-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-times-square-up-road.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-light-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-light-dali.JPG
+- name: docks-docks-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dry-skin.jpg
 ---
 Hall Of Fame Baseball.&nbsp;Amid Citizenship Law Outcry, Indian Authorities Ban Protests.&nbsp;Natural Health Care With The Best Teas.&nbsp;Titans Will Have Derrick Henry, Not Jackson Against Saints.&nbsp;Judges Sue Kansas Lawmakers Hoping To Boost Courts' Funding.&nbsp;Georgia Restores Thousands Of Purged Voters.&nbsp;Luper Joins Missouri As Offensive Assistant.&nbsp;Elf On The White House Shelf.&nbsp;
